[MOSIP-7139] Minor cleanup.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -4,6 +4,10 @@
 #
 tmp_dir: '/tmp/' 
 logs_dir: '/tmp/'
+user_home: '{{lookup("env", "HOME")}}'
+install_root: '{{user_home}}/mosip-infra/deployment/sandbox-v2'
+charts_root: '{{install_root}}/helm/charts'  # Helm charts root
+helm_cli_path: '{{user_home}}/bin'  # This path chosen as it is included in default $PATH in Centos 7.7
 
 sandbox_domain_name: test-sandbox.southindia.cloudapp.azure.com 
 site:
@@ -29,11 +33,6 @@ site:
     sender: sender
     unicode: unicode
    
-user_home: '{{lookup("env", "HOME")}}'
-install_root: '{{user_home}}/mosip-infra/deployment/sandbox-v2'
-charts_root: '{{install_root}}/helm/charts'  # Helm charts root
-helm_cli_path: '{{user_home}}/bin'  # This path chosen as it is included in default $PATH in Centos 7.7
-
 is_glowroot: absent  # absent or present
 
 docker_wait_time: 600   # Wait for docker to pull and deploy
@@ -104,9 +103,6 @@ postgres:
   user: postgres
   password: postgres
   max_connections: 1000
-
-# SFTP: used for picking up packets from DMZ
-sftp_user: 'sftpuser'  # This should be same in config files
 
 # Keycloak
 keycloak:
@@ -199,6 +195,6 @@ hdfs:
 config_repo:
   name: config_repo  # Git repo inside above node_path
   path: '{{nfs.folder}}/config_repo'
-  search_folder: ''  # If all properites at at the root repo level, then this will be empt
+  search_folder: ''  # If all properites at at the root repo level, then this will be empty
   storage_size: 10Mi
 
