[MOSIP-7139] Refactoring. Artifactory url read from group_vars/all.yml.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -8,6 +8,7 @@ user_home: '{{lookup("env", "HOME")}}'
 install_root: '{{user_home}}/mosip-infra/deployment/sandbox-v2'
 charts_root: '{{install_root}}/helm/charts'  # Helm charts root
 helm_cli_path: '{{user_home}}/bin'  # This path chosen as it is included in default $PATH in Centos 7.7
+artifactory_url: http://104.211.246.17:8040
 
 sandbox_domain_name: test-sandbox.southindia.cloudapp.azure.com 
 site:
