--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -2,8 +2,8 @@
 ---
 # Global variables - accessed by different roles and plays
 #
-tmp_dir: '/tmp/' 
-logs_dir: '/tmp/'
+tmp_dir: '/tmp/mosip' 
+logs_dir: '{{tmp_dir}}/logs'
 user_home: '{{lookup("env", "HOME")}}'
 install_root: '{{user_home}}/mosip-infra/deployment/sandbox-v2'
 charts_root: '{{install_root}}/helm/charts'  # Helm charts root
@@ -50,6 +50,8 @@ clusters:
       base_url: 'http://{{groups["mzworkers"][0]}}:30080' # Any node since ingress runs on nodeport
     dashboard:
       url: /mz-dashboard
+      token_file: '{{tmp_dir}}/dashboard_mz.token'
+      token_expiry: 86400 # Seconds 
     monitoring:
       enabled: true
       namespace: monitoring
@@ -73,6 +75,8 @@ clusters:
       base_url: 'http://{{groups["dmzworkers"][0]}}:30080' # Any node since ingress runs on nodeport
     dashboard: 
       url: /dmz-dashboard
+      token_file: '{{tmp_dir}}/dashboard_dmz.token'
+      token_expiry: 86400 # Seconds 
     monitoring:
       enabled: true
       namespace: monitoring
