--- a/deployment/sandbox-v2/playbooks/console.yml
+++ b/deployment/sandbox-v2/playbooks/console.yml
@@ -6,8 +6,8 @@
 - hosts: console
   gather_facts: true 
   tasks:
-    - {name: 'Create tmp folder', file: {name: '{{tmp_dir}}', state: directory}}
-    - {name: 'Create logs folder', file: {name: '{{logs_dir}}', state: directory}}
+    - {name: 'Create tmp folder {{tmp_dir}}', file: {name: '{{tmp_dir}}', state: directory}}
+    - {name: 'Create logs folder {{logs_dir}}', file: {name: '{{logs_dir}}', state: directory}}
 
 - hosts: console
   gather_facts: true 
