[MOSIP-7724] Password enabled on grafana dashboard.

--- a/deployment/sandbox-v2/playbooks/dmzcluster.yml
+++ b/deployment/sandbox-v2/playbooks/dmzcluster.yml
@@ -23,7 +23,6 @@
   vars:
     kube_config: '{{clusters.dmz.kube_config}}' 
     cluster_name: 'dmz'
-    dashboard_ingress_url: '{{clusters.dmz.dashboard.url}}'
-    dashboard_token_file: '{{clusters.dmz.dashboard.token_file}}'
+    dashboard_conf: '{{clusters.dmz.dashboard}}'
   roles:
     - {role: k8scluster/dashboard}
