--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -64,6 +64,7 @@ clusters:
         grafana:
           path: '{{nfs.folder}}/monitoring/mz/grafana'
       grafana_ingress_path: 'mz-grafana'
+      grafana_token_file: '{{tmp_dir}}/grafana_mz.token'
   dmz:
     kube_config:  "{{lookup('env', 'HOME') }}/.kube/dmzcluster.config" 
     nodePortNode: dmzworker0  # Any node on cluster for nodeport access
@@ -89,6 +90,7 @@ clusters:
         grafana:
           path: '{{nfs.folder}}/monitoring/dmz/grafana'
       grafana_ingress_path: 'dmz-grafana'
+      grafana_token_file: '{{tmp_dir}}/grafana_dmz.token'
 
 # Registration processor shared variables
 #
