[MOSIP-7142] Minor update to token copy.

--- a/deployment/sandbox-v2/roles/k8scluster/dashboard/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/k8scluster/dashboard/tasks/main.yml
@@ -22,7 +22,7 @@
 
 - name: 'Copy the token to {{dashboard_conf.token_file}}' 
   copy:
-    content: '{{token.stdout}}'
+    content: "{{token.stdout}}\n"
     dest: '{{dashboard_conf.token_file}}'
 
 
