--- a/deployment/sandbox-v2/playbooks/reset/reset-config-repo.yml
+++ b/deployment/sandbox-v2/playbooks/reset/reset-config-repo.yml
@@ -4,7 +4,7 @@
   become: yes
   vars_prompt:
     - name: sure 
-      prompt: 'Do you want to ERASE CONFIG REPO? Are you sure?' 
+      prompt: 'Do you want to ERASE CONFIG REPO? Are you sure? (yes/no)' 
       private: no
   tasks:
     - name: Delete config repo
