--- a/deployment/sandbox-v2/playbooks/reset/reset-hdfs.yml
+++ b/deployment/sandbox-v2/playbooks/reset/reset-hdfs.yml
@@ -4,7 +4,7 @@
   become: yes
   vars_prompt:
     - name: sure 
-      prompt: 'Do you want to ERASE all HDFS data? Are you sure?'
+      prompt: 'Do you want to ERASE all HDFS data? Are you sure? (yes/no)'
       private: no
   tasks:
     - name: Delete namenode data
