--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
@@ -255,9 +255,9 @@ registration.processor.id.repo.vidVersion=v1
 #Virus scanner packet extension
 registration.processor.packet.ext=.zip
 #Virus scanner server host
-mosip.kernel.virus-scanner.host=mzworker0
+mosip.kernel.virus-scanner.host=clamav
 #Virus scanner port
-mosip.kernel.virus-scanner.port=30310
+mosip.kernel.virus-scanner.port=80
 #Virus scanner application request id
 registration.processor.application.id=REGISTRATION
 registration.processor.rid.machineidsubstring=10
@@ -293,7 +293,7 @@ registration.processor.queue.username=admin
 #Queue Password
 registration.processor.queue.password=admin
 #Queue Url
-registration.processor.queue.url=tcp://mzworker0:30616
+registration.processor.queue.url=tcp://activemq:30616
 #Type of the Queue
 registration.processor.queue.typeOfQueue=ACTIVEMQ
 #Print Service address
