--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-dmz.properties
@@ -1,6 +1,6 @@
 #---------------------------------------Common properties-----------------------
 
-ingress.base.url: http://mzworker0:30080/
+ingress.base.url: http://{{ clusters.mz.any_node_ip }}:30080/
 
 #Kernel-idobjectalidator
 # Plug in property source as either 'LOCAL' or 'CONFIG_SERVER' or 'APPLICATION_CONTEXT' through this key
@@ -283,7 +283,7 @@ mosip.kernel.licensekey.permissions=OTP Trigger,OTP Authentication,Demo Authenti
 
 #-----------------------------Virus Scanner--------------------------------------
 #Virus Scanner server url
-mosip.kernel.virus-scanner.host=mzworker0
+mosip.kernel.virus-scanner.host={{ clusters.mz.any_node_ip }}
 #Virus Scanner server port
 mosip.kernel.virus-scanner.port=30310
 
