--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-mz.properties
@@ -293,7 +293,7 @@ mosip.kernel.licensekey.permissions=OTP Trigger,OTP Authentication,Demo Authenti
 #-----------------------------Virus Scanner--------------------------------------
 #Virus Scanner server url
 # Here we have specified any node of MZ cluster where clamav is running
-mosip.kernel.virus-scanner.host=mzworker0  
+mosip.kernel.virus-scanner.host={{ clusters.mz.any_node_ip }}
 #Virus Scanner server port: 
 mosip.kernel.virus-scanner.port=30310
 
