--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
@@ -1,10 +1,10 @@
 # Database Host name
-mosip.registration.processor.database.hostname=mzworker0
+mosip.registration.processor.database.hostname={{ clusters.mz.any_node_ip }}
 
 # Database Port
 mosip.registration.processor.database.port=30090
 
-mz.ingress.url=http://mzworker0:30080
+mz.ingress.url=http://{{ clusters.mz.any_node_ip }}:30080
 
 registration.processor.zone=dmz
 
@@ -92,7 +92,7 @@ token.request.issuerUrl=http://keycloak/auth/realms/mosip
 #--------Registration processor rest client API's--------------
 
 # The base url here points to ingress on MZ cluster
-mosip.base.url=http://mzworker0:30080
+mosip.base.url=http://{{ clusters.mz.any_node_ip }}:30080
 
 #Audit Service
 AUDIT=${mosip.base.url}/v1/auditmanager/audits
@@ -252,7 +252,7 @@ registration.processor.id.repo.vidVersion=v1
 #Virus scanner packet extension
 registration.processor.packet.ext=.zip
 #Virus scanner server host
-mosip.kernel.virus-scanner.host=mzworker0
+mosip.kernel.virus-scanner.host={{ clusters.mz.any_node_ip }}
 #Virus scanner port
 mosip.kernel.virus-scanner.port=30310
 #Virus scanner application request id
