--- a/deployment/sandbox-v2/roles/config-repo/files/properties/resident-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/resident-mz.properties
@@ -60,7 +60,7 @@ AUTHTYPESTATUSUPDATE=http://ida-internal-service/idauthentication/v1/internal/au
 #Regitstration processor reprint service
 REPRINTUIN=http://regproc-request-handler-service/registrationprocessor/v1/requesthandler/reprint
 #Registration status service
-REGISTRATIONSTATUSSEARCH=http://dmzworker0:30080/registrationprocessor/v1/registrationstatus/search
+REGISTRATIONSTATUSSEARCH=http://{{ clusters.dmz.any_node_ip }}:30080/registrationprocessor/v1/registrationstatus/search
 resident.center.id=10001
 resident.machine.id=10001
 
