--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -1,14 +1,14 @@
 # Master playbook
 #
 
-- import_playbook: playbooks/console.yml  # Basic setup on console machine
-- import_playbook: playbooks/nginx.yml # Setting nginx in advance so that Keycloak etc. can be tested 
-- import_playbook: playbooks/nfs.yml 
-- import_playbook: playbooks/mzcluster.yml
-- import_playbook: playbooks/dmzcluster.yml
-- import_playbook: playbooks/mzmonitoring.yml
-- import_playbook: playbooks/dmzmonitoring.yml
-- import_playbook: playbooks/postgres.yml
+#- import_playbook: playbooks/console.yml  # Basic setup on console machine
+#- import_playbook: playbooks/nginx.yml # Setting nginx in advance so that Keycloak etc. can be tested 
+#- import_playbook: playbooks/nfs.yml 
+#- import_playbook: playbooks/mzcluster.yml
+#- import_playbook: playbooks/dmzcluster.yml
+#- import_playbook: playbooks/mzmonitoring.yml
+#- import_playbook: playbooks/dmzmonitoring.yml
+#- import_playbook: playbooks/postgres.yml
 - import_playbook: playbooks/keycloak.yml
 - import_playbook: playbooks/clamav.yaml
 - import_playbook: playbooks/activemq.yaml
