--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/ingress-file.yaml
@@ -8,17 +8,7 @@ metadata:
      nginx.com/health-checks: "true"
 spec:
   rules:
-  - host: {{ .Values.domainName }}
-    http:
-      paths:
-      {{- range $index, $service := .Values.services }}
-      - path: {{ $service.ingressPath }} 
-        backend:
-          serviceName: {{ $service.serviceName }}
-          servicePort: {{ $service.servicePort }} 
-      {{- end }}
-  - host: {{ .Values.internalDomain }}
-    http:
+  - http:
       paths:
       {{- range $index, $service := .Values.services }}
       - path: {{ $service.ingressPath }} 
