--- a/deployment/sandbox-v2/helm/charts/keycloak/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/keycloak/templates/ingress-file.yaml
@@ -11,18 +11,9 @@ metadata:
   annotations:
     ingress.kubernetes.io/class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
-
 spec:
   rules:
-  - host: {{ .Values.domain }}
-    http:
-      paths:
-      - path: /keycloak(/|$)(.*)
-        backend:
-          serviceName: {{ .Values.name }}
-          servicePort: {{ .Values.servicePort }} 
-  - host: {{ .Values.internalDomain }}
-    http:
+  - http:
       paths:
       - path: /keycloak(/|$)(.*)
         backend:
