--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
@@ -293,7 +293,7 @@ registration.processor.queue.username=admin
 #Queue Password
 registration.processor.queue.password=admin
 #Queue Url
-registration.processor.queue.url=tcp://activemq:30616
+registration.processor.queue.url=tcp://{{ activemq.name }}:{{ activemq.nodeport }}
 #Type of the Queue
 registration.processor.queue.typeOfQueue=ACTIVEMQ
 #Print Service address
