[MOSIP-8033] Few bugs fixed.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -109,7 +109,7 @@ postgres:
   size: 10Gi
   service_name: postgres # svc on Kubernetes
   service_port: 80
-  server: '{{clusters.mz.nodePortNode}}'
+  server: '{{clusters.mz.nodeport_node}}'
   nodeport: 30090  # fixed for connecting from outside the cluster
   user: postgres
   password: postgres
