--- a/deployment/sandbox-v2/roles/clamav/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/clamav/defaults/main.yml
@@ -1,6 +1,7 @@
 clamav_name: clamav
 clamav_container_port: 3310
 clamav_image: mkodockx/docker-clamav
-clamav_version: alpine-edge
+#clamav_version: alpine-edge
+clamav_version: latest
 clamav_nodeport: 30310 # Arbitrary. PROP. Should match with property files
  
