--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -42,7 +42,7 @@ clusters:
   mz:
     kube_config:  "{{lookup('env', 'HOME') }}/.kube/mzcluster.config" 
     nodeport_node: mzworker0  # Any node on cluster for nodeport access
-    any_node_ip: '10.0.0.10'
+    any_node_ip: '10.0.0.10' # ip address of above node
     ingress:
       namespace: default
       nodeports:
@@ -70,7 +70,7 @@ clusters:
   dmz:
     kube_config:  "{{lookup('env', 'HOME') }}/.kube/dmzcluster.config" 
     nodeport_node: dmzworker0  # Any node on cluster for nodeport access
-    any_node_ip: '10.0.0.6'
+    any_node_ip: '10.0.0.6' # ip adddress of above node
     ingress:
       namespace: default
       nodeports:
