--- a/deployment/sandbox-v2/helm/charts/kernel/templates/prid-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/prid-dep.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.prid.serviceName }} 
-        image: {{ .Values.services.prid.dockerImage }}:{{ .Values.services.prid.dockerTag }} 
+        image: {{ .Values.services.prid.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
 #        # TODO: Correct docker - we have to write variables names explicitly
