--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -1,5 +1,25 @@
+# Manifest file containing version of all MOSIP core components.
 versions:
   services:
-    auth:
-      'kernel-auth-service':  'mosipdev/kernel-auth-service:1.0.9'
+    kernel:
+      auth:
+        'kernel-auth-service':  'mosipdev/kernel-auth-service:1.0.9'
+      masterdata:
+        'kernel-masterdata-service': 'mosipdev/kernel-masterdata-service:1.0.9'
+      idgen:
+        'kernel-idgenerator-service': 'mosipdev/kernel-idgenerator-service:1.0.9'
+      prid:
+        'kernel-pridgenerator-service': 'mosipdev/kernel-pridgenerator-service:1.0.9'
+      sync:
+        'kernel-syncdata-service': 'mosipdev/kernel-syncdata-service:1.0.9'
+      audit :
+        'kernel-auditmanager-service': 'mosipdev/kernel-auditmanager-service:1.0.9'
+      key:
+        'kernel-keymanager-service': 'mosipdev/kernel-keymanager-service:1.0.9'
+      notifier:
+        'kernel-notification-service': 'mosipdev/kernel-notification-service:1.0.9'
+      otp:
+        'kernel-otpmanager-service': 'mosipdev/kernel-otpmanager-service:1.0.9'
+      rid:
+        'kernel-ridgenerator-service': 'mosipdev/kernel-ridgenerator-service:1.0.9'
 
