--- a/deployment/sandbox-v2/helm/charts/prereg/templates/qrcode-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/qrcode-dep.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.qrcode.serviceName }} 
-        image: {{ .Values.services.qrcode.dockerImage }}:{{ .Values.services.qrcode.dockerTag }} 
+        image: {{ .Values.services.qrcode.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
